// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test suite for Messages component renders the UI as expected 1`] = `
<div
  className="messages"
>
  Messages
  <div
    className="unread_count badge"
  >
    4
  </div>
</div>
`;

exports[`Test suite for Messages component renders the UI with no unread messages as expected 1`] = `
<div
  className="messages"
>
  Messages
</div>
`;

exports[`renders the UI as expected 1`] = `
<div
  className="messages"
>
  Messages
  <div
    className="unread_count badge"
  >
    4
  </div>
</div>
`;

exports[`renders the UI with no unread messages as expected 1`] = `
<div
  className="messages"
>
  Messages
</div>
`;
